BinanceChain Logos & Some Issues Fixed
Solved issue #508 - Binance Chain: - Horizontal & vertical logos create
and added to src\assets\img - Integrated the horizontal logo into the
header with responsive code

Solved issue #389 - CanWork menu broken on small devices:
- Removed the left:-260px css code for small screen sizes
- Changed the width from 260px to 100% to make elements visible on very
small devices

Other issues solved:
- Hamburger menu toggle was not visible on very small screen sizes
-- Made its position fixed; it now overlays other elements

--- a/src/assets/css/canya.css
+++ b/src/assets/css/canya.css
@@ -5211,6 +5211,9 @@ ul.flexbox {
 }
 
 .topbar-toggler {
+  position: absolute;
+  top: 0;
+  right: 0;
   align-self: flex-start;
   padding: .25rem .75rem;
   font-size: 1.25rem;
@@ -5248,6 +5251,30 @@ ul.flexbox {
   align-items: center;
   flex-shrink: 0;
   margin-right: 16px;
+}
+
+.logo-binance {
+  display: block;
+  padding-left: 10%;
+}
+
+@media (max-width:480px) {
+  .logo-binance {
+  padding-left: 5%;
+  }
+}
+
+@media (max-width:390px) {
+  .logo-binance {
+  height: 30px;
+  padding-left: 0;
+  }
+}
+
+@media (max-width:290px) {
+  .logo-binance {
+  display:none;
+  }
 }
 
 .topbar-nav {
@@ -5966,8 +5993,7 @@ ul.flexbox {
 
 @media (max-width: 330px) {
   .topbar-nav {
-    left: -260px;
-    width: 260px !important;
+    width: 100%!important;
   }
 }
 
